--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1130,6 +1130,7 @@ S_{p} =\ ^{T_{\text{serial}}} /_{T_{\text{parallel}}}
 $$
 to monitor improvement in performance.
 
+\authnote{finish}
 
 %TODO: \authnote{Include efficiency}: 
 %$$ 
