--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-16 01:37:04 -0400 
+%% Created for Evan Bollig at 2013-09-26 03:36:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@phdthesis{Katta2012,
+	Author = {Katta, Kiran Kumar},
+	Date-Added = {2013-09-26 08:30:40 +0000},
+	Date-Modified = {2013-09-26 08:36:05 +0000},
+	School = {The University of Texas at El Paso},
+	Title = {High-order central finite-volume schemes for atmospheric modeling},
+	Year = {2012}}
 
 @misc{MPI,
 	Author = {The MPI Forum},
