--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -38,7 +38,38 @@ We operate under the assumption that inter-process communication is managed by t
 
 \section{Partitioning}
 
+Parallelization of RBF-FD relies on \emph{domain decomposition}. Domain decomposition subdivides the 
+
+
+
+\authnote{todo: subdomain methods are often employed for parallelization.}
 We start with the concept of a \emph{domain}, which is partitioned into a set of \emph{sub-domains}. %TODO: elaborate
+
+Parallel implementations of RBF methods rely on \emph{domain decomposition}. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods (\cite{Divo2007}). The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000}. Their work provided a solution to solve problem sizes into the millions of nodes.
+
+This work leverages a domain decomposition, but not for the purpose of conditioning. Instead subdomains are distributed across multiple compute nodes and scaling RBF-FD across more than a thousand CPU cores of an HPC cluster. Add to this a twist to incorporate a novel implementation on the GPU with overlapping communication and computation. This combination is unmatched in related work. However, RBF methods do have a bit of history of parallel implementations. 
+
+In 2007, Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
+subdomain boundaries for their implementation of a local collocation method \cite{Divo2007}. 
+The subdomains are processed independently, with derivative values 
+at artificial boundary points averaged to maintain global consistency of physical values. Their implementation 
+was designed for a 36 node cluster, but benchmarks and scalability tests are not provided.
+
+% Divo: it seems almost unnecessary to use domain decomposition if they have the local method.
+% I suppose the domain decomposition is necessary for averaging physical values more than RBF collocation.
+However, research on the parallelization of RBF algorithms to solve PDEs on multiple CPU/GPU architectures is essentially non-existent. We have found three studies that have addressed this topic, none of which implement RBF-FD but rather take the avenue of domain decomposition for global RBFs (similar to a spectral element approach). In \cite{Divo2007}, Divo and Kassab introduce subdomains with artificial boundaries that are processed independently. Their implementation was designed for a 36 node cluster, but benchmarks and scalability tests are not provided. Kosec and \v{S}arler \cite{Kosec2008} parallelize coupled heat transfer and fluid flow models using OpenMP on a single workstation with one dual-core processor. They achieved a speedup factor of 1.85x over serial execution, although there were
+no results from scaling tests. Yokota, Barba and Knepley \cite{Yokota2010} apply a restrictive additive Schwarz domain decomposition to parallelize global RBF interpolation of more then 50 million nodes on 1024 CPU processors.
+
+Kosec and \v{S}arler \cite{Kosec2008} have the only known (to our knowledge) OpenMP implementation for RBFs. The authors parallelize coupled heat transfer 
+and fluid flow problems on a single workstation. 
+The application involves the local RBF collocation method, explicit time-stepping and Neumann boundary conditions. A speedup 
+factor of 1.85x over serial execution was achieved by executing on two CPU cores; no further 
+results from scaling tests were provided. 
+
+Stevens et al. \cite{Stevens2009a} mention a parallel implementation under development, but no document is available at this time. 
+
+Perhaps the most competitive parallel implementation of RBFs is the PetRBF branch of PETSc \cite{Yokota2010}. The authors of PetRBF have implemented a highly scalable, efficient RBF interpolation method based on compact RBFs (i.e., they operate on sparse matrices). The authors demonstrate efficient weak scaling of PetRBF across 1024 processes on a Blue Gene/L, and strong scaling up to 128 processes on the same hardware. On the Blue Gene/L, PetRBF is demonstrated to achieve an impressive 74\% parallel weak scaling efficiency on 1024 processes (operating on over 50 million points), and 84\% strong scaling efficiency for 128 processes. Strong scaling was also tested on a Cray XT4, where strong scaling tops out at 36\% for 128 processes, a respectable number---and similar to observed results for our own code on for the same number of processes (see Chapter~\ref{chap:distributed_rbffd}).  
+
 
 
 
@@ -112,8 +143,10 @@ In Figure~\ref{fig:undirected_graph} new non-zeros are introduced to induce symm
 
 
 
-\section{Index Mappings and Local Node Ordering}
+\section{Index Mappings and Local View}
 
+Partitioning is equivalent to subdividing the global DM by rows. 
+The rows 
 
 \begin{figure}
 \begin{center}
