--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -47,26 +47,25 @@
 \mainmatter
 
 \include{introduction}
-\include{rbffd_method}
-\include{ordering_and_preconditioning}
+%\include{rbffd_method}
+%\include{ordering_and_preconditioning}
 \include{gpu_solver}
 \include{distributed_solver}
 
-\include{explicit_pde_solutions}
+%\include{explicit_pde_solutions}
 \include{implicit_pde_solutions}
-\include{performance_analysis} 
-\include{publications}
+%\include{publications}
 
 \include{conclusions}
 
-\appendix
-\include{rbffd_avoid_pole_singularities}
-\input{rbffd_weights_on_sphere}
-\input{performance_content/scaling/cut_from_distributed_solver}
-\input{performance_content/optimizations}
-\input{performance_content/hardware}
+%\appendix
+%\include{rbffd_avoid_pole_singularities}
+%\include{rbffd_weights_on_sphere}
+%\include{performance_content/scaling/cut_from_distributed_solver}
+%\include{performance_content/optimizations}
+%\include{performance_content/hardware}
 
-\include{stokes_revisited}
+%\include{stokes_revisited}
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
