--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -46,14 +46,14 @@
 
 \mainmatter
 
-\include{introduction}
+%\include{introduction}
 %\include{rbffd_method}
 %\include{ordering_and_preconditioning}
-\include{gpu_solver}
+%\include{gpu_solver}
 \include{distributed_solver}
 
 %\include{explicit_pde_solutions}
-\include{implicit_pde_solutions}
+%\include{implicit_pde_solutions}
 %\include{publications}
 
 \include{conclusions}
