--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,59 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-26 03:36:11 -0500 
+%% Created for Evan Bollig at 2013-09-27 14:18:36 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{StCyr2007,
+	Added-At = {2008-08-07T00:00:00.000+0200},
+	Author = {St.-Cyr, Amik and Gander, Martin J. and Thomas, Stephen J.},
+	Biburl = {http://www.bibsonomy.org/bibtex/2358763c62538c274c6ba799959b20e1b/dblp},
+	Date = {2008-08-07},
+	Date-Added = {2013-09-27 19:18:27 +0000},
+	Date-Modified = {2013-09-27 19:18:35 +0000},
+	Description = {dblp},
+	Ee = {http://dx.doi.org/10.1137/060652610},
+	Interhash = {05767751dab4bf6544d41c710fe3f9d7},
+	Intrahash = {358763c62538c274c6ba799959b20e1b},
+	Journal = {SIAM J. Scientific Computing},
+	Keywords = {dblp},
+	Number = 6,
+	Pages = {2402-2425},
+	Timestamp = {2008-08-07T00:00:00.000+0200},
+	Title = {Optimized Multiplicative, Additive, and Restricted Additive Schwarz Preconditioning.},
+	Url = {http://dblp.uni-trier.de/db/journals/siamsc/siamsc29.html#StCyrGT07},
+	Volume = 29,
+	Year = 2007,
+	Bdsk-Url-1 = {http://dblp.uni-trier.de/db/journals/siamsc/siamsc29.html#StCyrGT07}}
+
+@inproceedings{Gropp1990,
+	Address = {Philadelphia},
+	Area = {D:R},
+	Areaseq = {0},
+	Author = {W. D. Gropp and D. E. Keyes},
+	Booktitle = {Third International Symposium on Domain Decomposition Methods for Partial Differential Equations},
+	Date-Added = {2013-09-27 19:03:23 +0000},
+	Date-Modified = {2013-09-27 19:03:29 +0000},
+	Editor = {T. F. Chan and R. Glowinski and J. P\'eriaux and O. B. Widlund},
+	Pages = {115--129},
+	Publisher = {SIAM},
+	Title = {A domain decomposition method with locally uniform mesh refinement},
+	Year = {1990}}
+
+@article{Schubert2011,
+	Author = {Gerald Schubert and Georg Hager and Holger Fehske and Gerhard Wellein},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Date-Added = {2013-09-27 16:59:01 +0000},
+	Date-Modified = {2013-09-27 16:59:07 +0000},
+	Ee = {http://arxiv.org/abs/1101.0091},
+	Journal = {CoRR},
+	Title = {Parallel sparse matrix-vector multiplication as a test case for hybrid MPI+OpenMP programming},
+	Volume = {abs/1101.0091},
+	Year = {2011}}
 
 @phdthesis{Katta2012,
 	Author = {Katta, Kiran Kumar},
