--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -100,7 +100,7 @@ Developers either implemented their own kernels (as we did in \cite{BolligFlyerE
 
 %TODO: CUDA MPI not a feature provided by OpenCL. 
 
-
+Performance of SpMV on GPU will not be optimal. Often one finds in literature examples of applications that have been accelerated by huge factors. In fact, speedup factors greater than 10x should never be possible for SpMV. In order to manage expectations of how much faster tasks will operate on the GPU we can turn to a \emph{roofline model} \cite{Williams2009}. The roofline model 
 %TODO: GPU memory layout
 %TODO: GPU multi-processor units
 
